--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-=======
-    <link rel="icon" href="./dist/favicon.ico">
->>>>>>> aec42ab0089af00d7bf878359c1e7ee28878aa1e
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
